--- a/src/main/com/Personal_CSS_Lessons/css_code_1.html
+++ b/src/main/com/Personal_CSS_Lessons/css_code_1.html
@@ -21,5 +21,19 @@
     <br>
     <br>
     <div class="circle"></div>
+    <br>
+    <br>
+    <p class="text1">Alaska</p>
+    <br>
+    <br>
+</body>
+<body>
+    <div class="cont">
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item1"></div>
+    </div>
 </body>
 </html>
