Finished with Changes Final Push

--- a/src/main/com/Personal_CSS_Lessons/film_festival/film_festival.html
+++ b/src/main/com/Personal_CSS_Lessons/film_festival/film_festival.html
@@ -12,15 +12,16 @@
 <body>
     <div>
         <img src="https://d2pn8kiwq2w21t.cloudfront.net/images/grand_tour.width-1320.jpg" alt="The Grand Tour Movie Poster">
-        <h1 class="The_Grand_Tour">the grand tour</h1>
+        <h1 class="the_grand_tour">the grand tour</h1>
         <h2 id="subtitle">A once in a lifetime getaway</h2>
     </div>
     <br>
     <br>
     <br>
+    <br>
     <div>
         <img src="https://d2pn8kiwq2w21t.cloudfront.net/images/enceladus.width-1320.jpg" alt="Enceladus Movie Poster">
-        <h1 class="Enceladus">encaladus</h1>
+        <h1 class="enceladus">enceladus</h1>
         <h2 id="encaladus_subtitle">More than 100 breathtaking geysers</h2>
     </div>
 
