Return_To_The_Moon needs more work

--- a/src/main/com/Personal_CSS_Lessons/css_code_1.html
+++ b/src/main/com/Personal_CSS_Lessons/css_code_1.html
@@ -36,4 +36,24 @@
         <div class="item1"></div>
     </div>
 </body>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<body>
+    <div class="object1"></div>
+    <br>
+    <div class="object2"></div>
+</body>
 </html>
