More work needs to get don for alignment

--- a/src/main/com/Personal_CSS_Lessons/Return_To_The_Moon_Exercise/index.html
+++ b/src/main/com/Personal_CSS_Lessons/Return_To_The_Moon_Exercise/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,14 +10,16 @@
 <body>
     <header class="header">
         <!--Logo goes Here-->
-        <img src="https://cdn.filestackcontent.com/Xtcj1a3jT2OVcPCmXQx5" alt="Return to the Moon" height="150">   
+        <img id="emblem" src="https://cdn.filestackcontent.com/Xtcj1a3jT2OVcPCmXQx5" alt="Return to the Moon" height="200">   
         <!--Navigation goes here-->
-        <nav class="navigation">
-            <a href="#">Home</a>
-            <a href="#">Shop</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-        </nav>
+        <div id="top_nav">
+            <nav class="navigation">
+                <a href="#">Home</a>
+                <a href="#">Shop</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </nav>
+        </div>
     </header>
 </body>
 </html>
