--- a/src/main/com/Personal_CSS_Lessons/Return_To_The_Moon_Exercise/index.html
+++ b/src/main/com/Personal_CSS_Lessons/Return_To_The_Moon_Exercise/index.html
@@ -14,7 +14,7 @@
             <a href="#">Home</a>
             <a href="#">Shop</a>
             <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href="#">Contact Us</a>
         </nav>
     </header>
 </body>
