--- a/src/main/com/Personal_CSS_Lessons/Return_To_The_Moon_Exercise/index.html
+++ b/src/main/com/Personal_CSS_Lessons/Return_To_The_Moon_Exercise/index.html
@@ -103,5 +103,9 @@
         Moon, Mars, Saturn, and Jupiter.
         </p>
     </div>
+    <footer class="footer">
+	<strong>Return to the Moon Industries</strong><br/>
+	Text on this page has been sampled from <a href="https://www.nasa.gov/specials/artemis/" target="_blank" class="copyright-link">NASA</a>, used under the <a href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank" class="copyright-link">Creative Commons Attribution-ShareAlike 3.0 License.</a>
+</footer>
 </body>
 </html>
