besic css lessons

--- a/src/main/com/Personal_CSS_Lessons/youtube_tutorials/youtube_tutorial_project_1/css_display_property.html
+++ b/src/main/com/Personal_CSS_Lessons/youtube_tutorials/youtube_tutorial_project_1/css_display_property.html
@@ -8,11 +8,8 @@
     <title>CSS_Display_Property</title>
 </head>
 <body>
-    <div>
-        <p class="one">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem excepturi magni cumque exercitationem provident, dignissimos accusantium tempore maxime mollitia culpa.</p>
-        <p class="two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, vel fugit? Laboriosam eveniet vero optio cupiditate ab obcaecati iste quasi.
-        <span class="special">hey i'm absolute</span>
-        </p>
+    <div class="banner">
+        <h1>Hello World I'm learning css</h1>
     </div>
 </body>
 </html>
